      "auto" devices appearing after "/etc/init.d/networking start" already
      ran.  (LP: #1374521)
    - Add Get-RTC-is-in-local-time-setting-from-etc-default-rc.patch: In
      Ubuntu we currently keep the setting whether the RTC is in local or UTC
      time in /etc/default/rcS "UTC=yes|no", instead of /etc/adjtime.
      (LP: #1377258)

    Upgrade fixes, keep until 16.04 LTS release:
    - systemd Conflicts/Replaces/Provides systemd-services.
    - Remove obsolete systemd-logind upstart job.
    - Clean up obsolete /etc/udev/rules.d/README on upgrades. (LP: #1381655)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 01 Dec 2014 15:41:09 +0100

systemd (217-4) UNRELEASED; urgency=medium

  * Reinstate a debian/extra/rules/50-firmware.rules which immediately tells
    the kernel that userspace firmware loading failed. Otherwise it tries for a
    minute to call the userspace helper (if CONFIG_FW_LOADER_USER_HELPER is
    enabled) in vain, which causes long delays with devices which have a range
    of possible firmware versions. (LP: #1398458)

 -- Martin Pitt <mpitt@debian.org>  Tue, 02 Dec 2014 18:47:43 +0100

systemd (217-3) experimental; urgency=medium

  [ Martin Pitt ]
  * systemd.bug-script: Really capture stderr of systemd-delta.
    (Closes: #771498)
  * boot-and-services autopkgtest: Give test apparmor job some time to
    actually finish.

  [ Didier Roche ]
  * updated debian/patches/insserv.conf-generator.patch:
    - if /etc/X11/default-display-manager doesn't match a systemd unit
      (or doesn't exist), be less agressive about what to mask: we let
      all sysvinit-only display-manager units enabled to fallback to previous
      behavior and let them starting. (Closes: #771739)

 -- Martin Pitt <mpitt@debian.org>  Tue, 02 Dec 2014 16:53:36 +0100

systemd (217-2) experimental; urgency=medium

  * Re-enable journal forwarding to syslog, until Debian's sysloggers
    can/do all read from the journal directly.